populate java options to appmaster